Feat: Same format Compress

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
             <label for="avifMode">To AVIF</label>
             <input type="radio" id="pngMode" name="mode" value="png">
             <label for="pngMode">HEIC to PNG</label>
+            <input type="radio" id="compressMode" name="mode" value="compress">
+            <label for="compressMode">Compress</label>
         </div>
         
         {% with messages = get_flashed_messages() %}
